fixed project detail view on mobile, added overflow scrolling to about and projects modals

--- a/style.css
+++ b/style.css
@@ -175,10 +175,14 @@ body {
   border-radius: 50%;
 }
 
+.about-details {
+  margin-top: 15rem;
+  margin-left: 0rem;
+}
+
 .about__header {
-  padding-top: 15rem;
-  margin-left: 30rem;
-  text-align: center;
+  margin-top: 10rem;
+  margin-left: 50rem;
   text-transform: uppercase;
   letter-spacing: 1.1rem;
   font-size: 2.5rem;
@@ -186,13 +190,13 @@ body {
 
 .about__summary {
   width: 50rem;
-  margin: 1rem 60rem;
+  margin: 1rem 50rem;
   font-size: 1.6rem;
 }
 
 .about__tech-list {
   display: inline-block;
-  margin: 5rem 10rem 10rem 60rem;
+  margin: 5rem 5rem 10rem 50rem;
 }
 
 .about__skills-list {
@@ -416,6 +420,7 @@ li {
 }
 
 .project-boxes {
+  height: 75%;
   overflow-y: scroll;
 }
 
@@ -438,7 +443,10 @@ li {
 }
 
 .about-details {
+  margin-top: 30rem;
+  margin-left: 0rem;
   overflow-y: auto;
+  height: 50%;
 }
 
 .about__profilepic--box {
@@ -454,11 +462,9 @@ li {
 }
 
 .about__header {
-  margin-top: 15rem;
+  margin-top: 0;
   margin-left: 0rem;
   text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 1.1rem;
   font-size: 1.5rem;
 }
 
@@ -470,7 +476,7 @@ li {
 
 .about__tech-list {
   display: block;
-  margin: 1rem 10rem;
+  margin: 9rem 10rem;
   
 }
 
@@ -478,6 +484,27 @@ li {
   display: block;
   padding-bottom: 1rem;
   margin: 1rem 10rem;
+}
+
+.project-modal {
+  height: 96%;
+  width: 94%;
+  padding: 3rem;
+}
+.project-details {
+  margin: 1rem 0.5rem;
+  /* margin-left: auto;
+  margin-right: auto; */
+  text-align: center;
+  background-color: #eee;
+  color: #777777;
+  width: 85%;
+  
+  text-decoration: none;
+}
+
+.project__tech-list {
+  margin-left: 10rem;
 }
 
 }
